# hands_on_cuda

./: .gitignore  CMakeLists.txt  build.sh  hands_on_cuda.ipynb  main.py  test.py
src/: Makefile  main.cpp  pybind11_module.cpp
src/kernel/: add.cu  kernel.h
